[project]
name = "vrmonitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "loguru>=0.7.3",
    "mediapipe>=0.10.33",
    "opencv-python>=4.13.0.92",
    "pyautogui>=0.9.54",
    "pydirectinput>=1.0.4",
    "pygetwindow>=0.0.9",
    "pyside6>=6.11.0",
    "pywin32>=311",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]
